you live you learn

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     </span>
                 </div>
                 <div class="card-body">
-                    <h4 class="card-title">CEO</h4>
-                    <p class="card-description">Margaret Wanja</p>
+                    <h4 class="card-title">FOUNDER</h4>
+                    <p class="card-description">Grace Osinde</p>
                     <p class="card-description">
                         Making street children financially independent.
                     </p>
