Thank you Jenny
"Color up there I think go with text white"

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
     </div>
 </div>
     <footer>
+        <a href="https://github.com/ENOCKMOSETI/streetUproot2.0" class="p-3">
+            <i class="fab fa-github"></i>
+        </a>
         &copy; 2020 street uproot. All Rights Reserved
     </footer>
 </body>
