--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    
     <link rel="stylesheet" href="style.css">
     <title>STREET UPROOT</title>
 </head>
@@ -34,10 +33,10 @@
         <nav class="navbar">
             <ul class="mainNav">
                 <li class="navItem">
-                    <a href="#gallery">GALLERY</a>
+                    <a href="#gallery">GALLERY |</a>
                 </li>
                 <li class="navItem">
-                    <a href="#about">ABOUT</a>
+                    <a href="#about">ABOUT |</a>
                 </li>
                 <li class="navItem">
                     <a href="#contact">CONTACT</a>
@@ -45,7 +44,7 @@
             </ul>
         </nav>
     </header>
-    <img src="../img/logo.jpg" alt="">
+    <img class="street" src="../img/logo.jpg" alt="">
     <div class="row" id="about">
     <div  class="col-md-6">
         <p class="abt">
@@ -53,7 +52,6 @@
             We help them stop using drugs, assess their hard work and their willingness to leave the street life... but we mostly recommend those who don't use at all... when they are drug free we then start the small scale businesses they are interested in and good at. Though, it's our long term plan to have one business for everyone
         </p>
     </div>
-    
         <div class="col-md-6" id="cardd">
             <div class="card card-profile">
                 <div class="card-header card-avatar">
@@ -71,16 +69,18 @@
             </div>
         </div>
     </div>
-    <div class="images" id="gallery">
-        <img src="../img/1.jpg" alt="">
-        <img src="../img/2.jpg" alt="">        
-        <img src="../img/5.jpg" alt="">
+    <hr>
+    <div  class="gallery">
+        <img class="images" src="../img/1.jpg" alt="">
+        <img class="images" src="../img/2.jpg" alt="">        
+        <img class="images" src="../img/5.jpg" alt="">
     </div>
+    <hr>
     <div class="container contact row" id="contact">
         <div class="d-inline-block align-top font-effect-shadow-multiple col-md-3" id="tangerine">
             <a href="index.html">
 
-                <img src="../img/logo.jpg" height="170" width="170" alt=""><br>
+                <img src="../img/LOGO.jpg" height="170" width="170" alt=""><br>
             </a>
             REACH OUT TO US
         </div>
@@ -105,9 +105,11 @@
     </div>
 </div>
     <footer>
+    <div class="icons">
         <a href="https://github.com/ENOCKMOSETI/streetUproot2.0" class="p-3">
             <i class="fab fa-github"></i>
         </a>
+    </div>
         &copy; 2020 street uproot. All Rights Reserved
     </footer>
 </body>
