--- a/index.html
+++ b/index.html
@@ -11,106 +11,79 @@
     <link rel="stylesheet" href="style.css">
     <title>STREET UPROOT</title>
 </head>
-<body>
-    <header>
-        <div class="head">
-            <a href="index.html">    
-                <h1>STREET UPROOT</h1>
-            </a>
-            <h2>Kazi Kwa Vijana</h2>
-        </div>
-        <div class="icons">
-            <a href="https://www.facebook.com/Street-Uproot-107893247667009" class="p-3">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="#" class="p-3">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="https://www.instagram.com/street_uproot/" class="p-3">
-                <i class="fab fa-instagram"></i>
-            </a>
-        </div>
-        <nav class="navbar">
-            <ul class="mainNav">
-                <li class="navItem">
-                    <a href="#gallery">GALLERY |</a>
-                </li>
-                <li class="navItem">
-                    <a href="#about">ABOUT |</a>
-                </li>
-                <li class="navItem">
-                    <a href="#contact">CONTACT</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <img class="street" src="../img/logo.jpg" alt="">
-    <div class="row" id="about">
-    <div  class="col-md-6">
-        <p class="abt">
-            Street Uproot is all about making street children financially independent... It's an ongoing project with four beneficiaries. <br>
-            We help them stop using drugs, assess their hard work and their willingness to leave the street life... but we mostly recommend those who don't use at all... when they are drug free we then start the small scale businesses they are interested in and good at. Though, it's our long term plan to have one business for everyone
-        </p>
-    </div>
-        <div class="col-md-6" id="cardd">
-            <div class="card card-profile">
-                <div class="card-header card-avatar">
-                    <span>
+    <body>
+        <img class="street" src="../img/l.jpg" alt="logo">
+        <div class="row">
+            <div  class="col-md-6">
+                <p class="about">
+                    Street Uproot is all about making street children financially independent... It's an ongoing project with four beneficiaries. <br>
+                    We help them stop using drugs, assess their hard work and their willingness to leave the street life... but we mostly recommend those who don't use at all... when they are drug free we then start the small scale businesses they are interested in and good at. Though, it's our long term plan to have one business for everyone
+                </p>
+            </div>
+            <div class="col-md-6">
+                <div class="card card-profile">
+                    <div class="card-header card-avatar">
                         <img class="img" src="../img/CEO.jpg">
-                    </span>
-                </div>
-                <div class="card-body">
-                    <h4 class="card-title">FOUNDER</h4>
-                    <p class="card-description">Grace Osinde</p>
-                    <p class="card-description">
-                        Making street children financially independent.
-                    </p>
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">GRACE OSINDE</h4>
+                        <p class="card-description">FOUNDER</p>
+                        <p class="card-description">
+                            Making street children financially independent.
+                        </p>
+                        <div class="icons">
+                            <a href="https://www.facebook.com/Street-Uproot-107893247667009" class="p-3">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/street_uproot/" class="p-3">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <hr>
-    <div  class="gallery">
-        <img class="images" src="../img/1.jpg" alt="">
-        <img class="images" src="../img/2.jpg" alt="">        
-        <img class="images" src="../img/5.jpg" alt="">
-    </div>
-    <hr>
-    <div class="container contact row" id="contact">
-        <div class="d-inline-block align-top font-effect-shadow-multiple col-md-3" id="tangerine">
-            <a href="index.html">
-
-                <img src="../img/LOGO.jpg" height="170" width="170" alt=""><br>
-            </a>
-            REACH OUT TO US
+        <hr>
+        <div  class="gallery">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="../img/1.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="../img/2.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="../img/3.jpg" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
+        <hr>
+        <footer>
+            <div>&copy; 2021 street uproot. All Rights Reserved</div>
+            <div class="icons">
+                <a href="https://github.com/ENOCKMOSETI/streetUproot2.0" class="p-3">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+        </footer>
 
-        <div class=" col-md-9">
-        <form action="">
-
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname">
-        
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" >
-
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" >
-            <label for="subject">Subject</label>
-            <textarea id="subject" name="subject" placeholder="Send us your thoughts..." style="height:200px"></textarea>
-        
-            <input type="submit" value="Submit">
-
-        </form>
-    </div>
-</div>
-    <footer>
-    <div class="icons">
-        <a href="https://github.com/ENOCKMOSETI/streetUproot2.0" class="p-3">
-            <i class="fab fa-github"></i>
-        </a>
-    </div>
-        &copy; 2020 street uproot. All Rights Reserved
-    </footer>
-</body>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
 </html>
